# clipper

./: .gitignore  README  cabal.project.local  clipper.cabal
Algebra/: Clipper.hsc
cbits/: clipper.cpp  clipper.hpp
test/: Test.hs  test.cpp
