Name:                clipper
Version:             0.0.1
Synopsis:            Haskell API to clipper (2d polygon union/intersection/xor/clipping API)
-- Description:         
Homepage:            https://github.com/chetant/clipper
License:             BSD3
License-file:        LICENSE
Author:              Chetan Taralekar
Maintainer:          chetant@gmail.com
Copyright:           (c) Chetan Taralekar 2011, 2012
Category:            Algebra

Build-type:          Simple
Extra-source-files:  README
                     cbits/clipper.hpp
                     cbits/clipper.cpp
                     cbits/README
                     cbits/License.txt
Cabal-version:       >=1.2
Library
  Exposed-modules:   Algebra.Clipper
  
  Build-depends:     base >= 4
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  Build-tools:       hsc2hs
  Include-dirs:      cbits
  C-sources:          cbits/clipper.cpp
  Extra-libraries:   stdc++
